# starmans-odyssey

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
.github/workflows/: build.yml  buildgame.yml  linux.yml  macos.yml  windows.yml
include/: Camera.hpp  FrameBuffer.hpp  Input.hpp  Light.hpp  LightTypes.hpp  Material.hpp  Mesh.hpp  Model.hpp  Player.hpp  Scene.hpp  SceneManager.hpp  ScreenQuad.hpp  Shader.hpp  TestScene.hpp  Texture.hpp  Window.hpp
includes/: Input.hpp  Window.hpp
includes/Math/: Matrix.hpp  Matrix4x4.hpp  Vectors.hpp
includes/Rendering/: Camera.hpp  Mesh.hpp  Renderer.hpp  Shader.hpp
libs/include/glad/: glad.h
libs/src/: glad.c
shaders/: basic.vert
src/: main.cpp
src/Engine/: Camera.cpp  FrameBuffer.cpp  Input.cpp  LICENSE  Material.cpp  Material.hpp  Mesh.cpp  Model.cpp  SceneManager.cpp  ScreenQuad.cpp  Shader.cpp  Texture.cpp  Window.cpp
src/Rendering/: Camera.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp
src/Starman/: Player.cpp  TestScene.cpp
src/Tools/: Input.cpp  Window.cpp
src/Tools/Math/: Matrix.cpp  Matrix4x4.cpp
